fix: Showing scroll when field is too small

--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -256,7 +256,6 @@
           background-color: #1d1d1d;
           padding: 12px;
           border-radius: 12px;
-          overflow: hidden;
           min-height: 40px;
           height: min-content;
           margin: unset;
